added to README

--- a/doc/README
+++ b/doc/README
@@ -2,3 +2,5 @@ Brianna Fidder
 Ezekiel Chopper
 
 SIM and VIS
+
+Note for VIS: VIS doesn't actually do anything, it was just me trying to get pygame up and running and ran out of time to make it anything more.
